--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "3 column HTML template",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jev11/otus-lesson-16.git"
@@ -14,5 +13,10 @@
   "bugs": {
     "url": "https://github.com/jev11/otus-lesson-16/issues"
   },
-  "homepage": "https://github.com/jev11/otus-lesson-16#readme"
+  "homepage": "https://github.com/jev11/otus-lesson-16#readme",
+  "devDependencies": {
+    "prettier": "^2.3.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0"
+  }
 }
